<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/back">

        <Button
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_back1"
            android:textSize="20sp"
            android:backgroundTint="@android:color/black"
            android:textColor="@android:color/white"
            android:fontFamily="@font/dancingfont"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:fontFamily="@font/dancingfont"
            android:text="@string/title_reservation"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etFirstName"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/edittext_border"
            android:fontFamily="@font/dancingfont"
            android:hint="@string/hint_first_name"
            android:padding="10dp"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        <EditText
            android:id="@+id/etLastName"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:hint="@string/hint_last_name"
            android:textColorHint="@android:color/black"
            android:textColor="@android:color/black"
            android:fontFamily="@font/dancingfont"
            android:textSize="20sp"
            android:background="@drawable/edittext_border"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@id/etFirstName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/tvLabelSeats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_seats"
            android:textColor="@android:color/black"
            android:fontFamily="@font/dancingfont"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/etLastName"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"/>

        <Spinner
            android:id="@+id/spinnerSeats"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:background="@drawable/edittext_border"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvLabelSeats"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/tvDateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_date"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:fontFamily="@font/dancingfont"
            app:layout_constraintTop_toBottomOf="@id/spinnerSeats"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"/>

        <!-- Day Spinner comes first -->
        <Spinner
            android:id="@+id/spinnerDay"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:background="@drawable/edittext_border"
            android:layout_marginStart="1dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDateLabel"/>

        <!-- Colon separator -->
        <TextView
            android:id="@+id/tvSlash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slash"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:fontFamily="@font/dancingfont"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@id/spinnerDay"
            app:layout_constraintStart_toEndOf="@id/spinnerDay"
            app:layout_constraintTop_toTopOf="@id/spinnerDay"/>

        <!-- Month Spinner comes second -->
        <Spinner
            android:id="@+id/spinnerMonth"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:background="@drawable/edittext_border"
            app:layout_constraintTop_toTopOf="@id/spinnerDay"
            app:layout_constraintStart_toEndOf="@id/tvSlash"
            android:layout_marginStart="8dp"/>

        <TextView
            android:id="@+id/tvTimeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_time"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:fontFamily="@font/dancingfont"
            app:layout_constraintTop_toBottomOf="@id/spinnerMonth"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"/>

        <Spinner
            android:id="@+id/spinnerHour"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:background="@drawable/edittext_border"
            app:layout_constraintTop_toBottomOf="@id/tvTimeLabel"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/tvColon"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/colon"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:fontFamily="@font/dancingfont"
            app:layout_constraintBottom_toBottomOf="@id/spinnerHour"
            app:layout_constraintStart_toEndOf="@id/spinnerHour"
            app:layout_constraintTop_toTopOf="@id/spinnerHour"
            android:layout_marginStart="8dp"/>

        <Spinner
            android:id="@+id/spinnerMinute"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:background="@drawable/edittext_border"
            app:layout_constraintTop_toTopOf="@id/spinnerHour"
            app:layout_constraintStart_toEndOf="@id/tvColon"
            android:layout_marginStart="8dp"/>

        <TextView
            android:id="@+id/tvPaymentMethodLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_payment_method"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:fontFamily="@font/dancingfont"
            app:layout_constraintTop_toBottomOf="@id/spinnerMinute"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"/>

        <RadioGroup
            android:id="@+id/rgPaymentMethod"
            android:textSize="17sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvPaymentMethodLabel"
            app:layout_constraintStart_toStartOf="parent"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">
            <RadioButton
                android:id="@+id/rbBit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bit"
                android:textSize="17sp"
                android:textColor="@android:color/black"
                android:fontFamily="@font/dancingfont"/>
            <RadioButton
                android:id="@+id/rbCash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cash"
                android:textSize="17sp"
                android:textColor="@android:color/black"
                android:fontFamily="@font/dancingfont"/>
            <RadioButton
                android:id="@+id/rbCredit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/credit"
                android:textSize="17sp"
                android:textColor="@android:color/black"
                android:fontFamily="@font/dancingfont"/>
        </RadioGroup>

        <TextView
            android:id="@+id/tvVeganLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_vegan"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:fontFamily="@font/dancingfont"
            app:layout_constraintTop_toBottomOf="@id/rgPaymentMethod"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"/>

        <RadioGroup
            android:id="@+id/rgVegan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            app:layout_constraintTop_toBottomOf="@id/tvVeganLabel"
            app:layout_constraintStart_toStartOf="parent"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">
            <RadioButton
                android:id="@+id/rbYes"
                android:textSize="17sp"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="@string/yes"
                android:textColor="@android:color/black"
                android:fontFamily="@font/dancingfont"/>
            <RadioButton
                android:id="@+id/rbNo"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="@string/no"
                android:textSize="17sp"
                android:checked="true"
                android:textColor="@android:color/black"
                android:fontFamily="@font/dancingfont"/>
        </RadioGroup>

        <Button
            android:id="@+id/btnReserveSeats"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@android:color/black"
            android:fontFamily="@font/dancingfont"
            android:text="@string/btn_reserve_seats"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rgVegan" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
